@@ -2,6 +2,9 @@
 	* lisp/sawfish/gtk/widgets/image.jl: improved loading of preview-image
 	-- Lucas Pandolfo
 
+	* lisp/sawfish/cfg/layout/keymaps.jl: ported selector for choosing
+	keymap in SawfishConig to GtkComboBoxText
+
 2011-06-11  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/cfg/widgets/workspace-geometry.jl: removed, unused
 
